Fix mobile sidebar layout bug; improve log-out experience; ensure sidebar closes on mobile when any button is clicked

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -14,8 +14,8 @@
     width   : 100%;
     height  : 100%;
 
-    display              : grid;
-    grid-template-rows   : min-content 1fr;
+    display           : grid;
+    grid-template-rows: min-content 1fr;
 
     &.sidebar-open {
         grid-template-columns: minmax(350px, 20%) 1em auto 1em;
@@ -36,17 +36,17 @@
     }
 
     .page-wrapper {
-        grid-row-start: 1;
-        grid-row-end: 3;
+        grid-row-start   : 1;
+        grid-row-end     : 3;
         grid-column-start: 1;
-        grid-column-end: 2;
+        grid-column-end  : 2;
     }
 
     &.sidebar-open {
 
         .page-wrapper {
-            display: grid;
-            grid-template-rows: minmax(3em, min-content) auto;
+            display              : grid;
+            grid-template-rows   : minmax(3em, min-content) auto;
             grid-template-columns: auto;
 
             grid-row-start   : 1;
@@ -69,8 +69,10 @@
             }
 
             @media only screen and (max-width: $break-md) {
-                width: 0;
-                padding: 0;
+                min-width : 0;
+                overflow-x: hidden;
+                width     : 0;
+                padding   : 0;
             }
         }
 
@@ -85,10 +87,10 @@
 
     &.sidebar-closed {
         .page-wrapper {
-            display: grid;
-            grid-template-rows: minmax(3em, min-content) auto;
+            display              : grid;
+            grid-template-rows   : minmax(3em, min-content) auto;
             grid-template-columns: 30px auto;
-            
+
             @media only screen and (max-width: $break-md) {
                 grid-template-columns: 50px auto;
             }
